--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "name": "@jasson2788/eslint-config-typescript",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tim Mouskhelichvili",
-  "license": "ISC",
-  "peerDependencies": {
-    "eslint": ">= 5"
-  }
+  "license": "ISC"
 }
