--- a/package.json
+++ b/package.json
@@ -1,11 +1,19 @@
 {
   "name": "@jasson2788/eslint-config-typescript",
-  "version": "1.0.5",
+  "version": "2.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Tim Mouskhelichvili",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
+    "eslint": "^8.19.0",
+    "eslint-plugin-jsdoc": "^39.3.3",
+    "eslint-plugin-react": "^7.30.1",
+    "jsdoc": "^3.6.10"
+  }
 }
