--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
   "name": "@tim.mouskhelichvili/eslint-config-typescript",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "Different eslint rules to keep my projects clean.",
   "main": "index.js",
   "author": "Tim Mouskhelichvili",
   "license": "ISC",
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.30.5",
-    "@typescript-eslint/parser": "^5.30.5",
-    "eslint": "^8.19.0",
-    "eslint-plugin-jsdoc": "^39.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.33.1",
+    "@typescript-eslint/parser": "^5.33.1",
+    "eslint": "^8.22.0",
+    "eslint-plugin-jsdoc": "^39.3.6",
     "eslint-plugin-react": "^7.30.1",
-    "jsdoc": "^3.6.10"
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "jsdoc": "^3.6.11"
   }
 }
