--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@tim.mouskhelichvili/eslint-config-typescript",
-  "version": "3.0.7",
+  "version": "3.0.8",
   "description": "Different eslint rules to keep my projects clean.",
   "main": "index.js",
   "author": "Tim Mouskhelichvili",
@@ -12,6 +12,7 @@
     "eslint-plugin-jsdoc": "^52.0.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^5.2.0",
+    "globals": "^16.3.0",
     "jsdoc": "^4.0.4",
     "typescript-eslint": "^8.39.0"
   }
